Parting ways with social-research-tool dedicated to be more detailed for Houman Hadian's research project and Socialytics to continue the path to be published as an NPM Package.

--- a/src/views/pages/main.ejs
+++ b/src/views/pages/main.ejs
@@ -3,7 +3,7 @@
   <div id="alert-container" style="position:absolute;top:100px;right:0"></div>
   <div class="container">
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-      <img class="github" id="github" alt="Houman Hadian's project research tool on Github" src="/img/svg/github-corner-right.svg">
+      <img class="github" id="github" alt="Socialytics on Github" src="/img/svg/github-corner-right.svg">
       <div class="navbar-header">
         <button class="instabtn" onclick="openNav('social-sidepanel')">&#9776;</button>
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -132,7 +132,7 @@
 
         </div><br>
         <div style=" text-align:center" class="footer">
-          <p class="small text-muted">Built with &#9829; for <a target="_blank" href="https://houmanhadian.github.io/" style="color:#1995ad;">Houman Hadian's doctoral project @ UAlg</a></p>
+          <p class="small text-muted">Created with &#9829; by <a target="_blank" href="https://github.com/emg110">M.Ghiasi (emg110)</a> & <a target="_blank" href="https://github.com/sheghzo">Sheghzo</a></p>
         </div>
       </div>
     </div>
