--- a/src/views/pages/register.ejs
+++ b/src/views/pages/register.ejs
@@ -37,7 +37,7 @@
         </form>
       </div>
     </div>
-    <p style="text-align: center" class="small text-muted">Built with &#9829; for <a target="_blank" href="https://houmanhadian.github.io/">Houman Hadian's doctoral project @ UAlg</a></p>
+    <p style="text-align: center" class="small text-muted">Created with &#9829; by <a target="_blank" href="https://github.com/emg110">M.Ghiasi (emg110)</a> & <a target="_blank" href="https://github.com/sheghzo">Sheghzo</a></p>
   </main>
 </div>
 <%- include ../layouts/layout-footer.ejs %>
