--- a/src/views/pages/dashboards-stats.ejs
+++ b/src/views/pages/dashboards-stats.ejs
@@ -9,7 +9,7 @@
 <div id="alert-container" style="position:absolute;top:100px;right:0"></div>
 <div class="container" id="stats-container" >
   <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <img class="github" id="github" alt="Houman Hadian's project research tool on Github" src="/img/svg/github-corner-right.svg">
+    <img class="github" id="github" alt="Socialytics on Github" src="/img/svg/github-corner-right.svg">
     <div class="navbar-header">
       <button class="instabtn" onclick="openNav('dashboard-sidepanel', '450px')">&#9776;</button>
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
