- Refactored and re implemented logging with winston and chalk libraries

--- a/src/views/layouts/layouts-javascripts-head.ejs
+++ b/src/views/layouts/layouts-javascripts-head.ejs
@@ -1,9 +1,9 @@
-<script type="text/javascript" src="/js/jquery.min.js"></script>
-<script type="text/javascript" src="/js/jquery.form.min.js"></script>
-<script type="text/javascript" src="/js/popper.min.js"></script>
-<script type="text/javascript" src="/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="/js/libs/jquery.min.js"></script>
+<script type="text/javascript" src="/js/libs/jquery.form.min.js"></script>
+<script type="text/javascript" src="/js/libs/popper.min.js"></script>
+<script type="text/javascript" src="/js/libs/bootstrap.min.js"></script>
 <!--<script type="text/javascript" src="/js/OverlayScrollbars.min.js"></script>-->
-<script type="text/javascript" src="/js/echarts.min.js"></script>
+<script type="text/javascript" src="/js/libs/echarts.min.js"></script>
 
 
 <script type="text/javascript" src="/js/geo/world.js"></script>
