--- a/src/views/layouts/layouts-javascripts.ejs
+++ b/src/views/layouts/layouts-javascripts.ejs
@@ -1,22 +1,22 @@
-<script type="text/javascript" src="/js/core.min.js"></script>
-<script type="text/javascript" src="/js/bootstrap-notify.min.js"></script>
-<script type="text/javascript" src="/js/dayjs.min.js"></script>
-<script type="text/javascript" src="/js/jquery.sparkline.min.js"></script>
-<script type="text/javascript" src="/js/jquery.tagsinput.min.js"></script>
-<script type="text/javascript" src="/js/jqcloud.min.js"></script>
-<script type="text/javascript" src="/js/jquery.responsiveTabs.js"></script>
+<script type="text/javascript" src="/js/libs/core.min.js"></script>
+<script type="text/javascript" src="/js/libs/bootstrap-notify.min.js"></script>
+<script type="text/javascript" src="/js/libs/dayjs.min.js"></script>
+<script type="text/javascript" src="/js/libs/jquery.sparkline.min.js"></script>
+<script type="text/javascript" src="/js/libs/jquery.tagsinput.min.js"></script>
+<script type="text/javascript" src="/js/libs/jqcloud.min.js"></script>
+<script type="text/javascript" src="/js/libs/jquery.responsiveTabs.js"></script>
 
-<script type="text/javascript" src="/js/holder.js"></script>
-<script src="/js/feathers.js"></script>
-<script src="/js/socket.io.js"></script>
+<script type="text/javascript" src="/js/libs/holder.js"></script>
+<script src="/js/libs/feathers.js"></script>
+<script src="/js/libs/socket.io.js"></script>
 <!--<script src="/js/localforage.min.js"></script>-->
-<script src="/js/globals.js"></script>
-<script src="/js/server-notification-client.js"></script>
+<script src="/js/scripts/globals.js"></script>
+<script src="/js/scripts/server-notification-client.js"></script>
 
 
 
-<script src="/js/socket-prepare.js"></script>
-<script src="/js/server-data-client.js"></script>
-<script src="/js/client.js"></script>
-<script src="/js/stats-client.js"> </script>
-<script src="/js/render-client.js"></script>
+<script src="/js/scripts/socket-prepare.js"></script>
+<script src="/js/scripts/server-data-client.js"></script>
+<script src="/js/scripts/client.js"></script>
+<script src="/js/scripts/stats-client.js"> </script>
+<script src="/js/scripts/render-client.js"></script>
