--- a/src/views/pages/login.ejs
+++ b/src/views/pages/login.ejs
@@ -46,7 +46,7 @@
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav('sidepanel-login')">&times;</a>
 
 </div>
-<script src="/js/globals.js"></script>
-<script src="/js/client.js"></script>
+<script src="/js/scripts/globals.js"></script>
+<script src="/js/scripts/client.js"></script>
 </body>
 </html>
