--- a/src/views/layouts/layout-home.ejs
+++ b/src/views/layouts/layout-home.ejs
@@ -8,7 +8,7 @@
 <%- include ../pages/sidepanel.ejs %>
 
 <%- include ../layouts/layout-footer.ejs %>
-<script src="/js/socket-prepare.js"></script>
-<script src="/js/sets-client.js"></script>
+<script src="/js/scripts/socket-prepare.js"></script>
+<script src="/js/scripts/sets-client.js"></script>
 </body>
 </html>
