--- a/src/views/pages/follow.ejs
+++ b/src/views/pages/follow.ejs
@@ -1,4 +1,4 @@
-<% if(!(typeof etlData.edges == 'undefined')){ console.log('we got data here...')%>
+<% if(!(typeof etlData.edges == 'undefined')){ console.log('EJS: Follow view has got data to load...')%>
   <% etlData.edges.forEach((edge) => { %>
   <% if(edge.node)edge = edge.node %>
   <div class="row whiteBox ">
