--- a/src/views/pages/people.ejs
+++ b/src/views/pages/people.ejs
@@ -1,4 +1,4 @@
-<% if(!(typeof etlData.edges == 'undefined')){ console.log('we got data here...')%>
+<% if(!(typeof etlData.edges == 'undefined')){ console.log('EJS: People view has got data to load...')%>
   <% etlData.edges.forEach((edge) => { %>
   <% if(edge.node){if(edge.node.user){edge = edge.node.user}else{edge = edge.node}} %>
   <div class="row whiteBox ">
